# tauri

./: components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tray.rs
src/assets/: index.css
src/components/: Greet.vue
src/router/: index.ts
src/views/: About.vue  Home.vue
